@@ -1,3 +1,7 @@
+2002-10-19  Miguel de Icaza  <miguel@ximian.com>
+
+	* glib/Object.cs: Added operator != and operator == overloads.
+
 2002-10-19  Rachel Hestilow <hestilow@ximian.com>
 
 	* gconf, sample/gconf: Added.
